# shadowkv

./: .gitignore  CITATION.cff  CLAIMS_TO_ARTIFACTS.md  LICENSE  README.md  T4_ENERGY_CALIBRATION.ipynb  pyproject.toml  requirements.txt  run_server_gpu_rerun.bat  server_gpu_rerun_remote.sh
config/: config.yaml
docs/: architectural_robustness.md  artifact_manifest.md  design_overview.md  experimental_setup.md  fidelity_deep_analysis.md  learned_admission_baseline_math.md  meritkv_research_design.md  policy_trace_logging.md  reproducing_blackwell.md  reproducing_p100.md  reproducing_results.md  results_table.md  runtime_experiments.md  semantic_correctness_ablations.md  semantic_fidelity.md  semantic_paraphrase_novelty.md  shadowkv_plus_research_design.md  shadowkv_theory.tex
experiments/: FIDELITY_RESULTS.md  analyze_shadowkv_results.py  build_policy_dataset_from_traces.py  calibrate_energy_from_measurement.py  eval_fidelity.py  fidelity_equiv_colab.ipynb  profile_plan.py  render_report.py  run_admission_baselines.py  run_all_baselines_sweep.py  run_benchmark.py  run_blackwell_semantic_n128.py  run_cpu_matrix.py  run_external_baseline_comparison.py  run_fidelity_equiv.py  run_memory_bound_trace.py  run_mixed_traffic.py  run_p100_isolated_sweep.py  run_semantic_ablation_matrix.py  run_semantic_fidelity.py  run_semantic_novelty_matrix.py  run_sensitivity_sweep.py  run_t4_energy_calibration.py  semantic_fidelity_colab.ipynb
literature_accurate_baselines/: README.md  adapter_lib.py  kvflow.md  lmcache.md  oracle_future_reuse.md  run_kvflow.py  run_lmcache.py  (+6 more)
(+6963 files in other folders)
