[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-kv-cache"
version = "0.3.0"
description = "Research prototype for slack-stealing tiered prefix banking in LLM serving"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.8",
    "transformers>=4.40",
    "torch>=2.1",
    "accelerate>=0.28",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.23",
    "pydantic>=2.7",
    "pandas>=2.2",
    "datasets>=2.19",
    "pynvml>=11.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
